infra/api/api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
